Fixed a few spacing issues

--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -51,7 +51,14 @@
             display: grid;
             grid-gap: 1em;
             margin: 1em;
-            grid-template-columns: repeat(3, 1fr);
+
+            @media screen and (orientation: landscape) {
+                grid-template-columns: repeat(3, 1fr);
+            }
+
+            @media screen and (orientation: portrait) {
+                grid-template-columns: auto;
+            }
 
             .member {
                 padding: 0.5em;
